# demodemoex

./: README.md  database.py  docker-compose-postgresql.yml  fill_data.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: e68e62dd5f3a_init.py
demodemoex(function)/: main.py
docs/: 284_Чаукин ВС_ИСРПО_УП.docx  DB_SQL_script.txt  отчет.docx
models/: __init__.py  material_type.py  product_type.py  product_worksops.py  products.py  workshops.py
project/: fill_data.py
project/core/: config.py  database.py
project/models/: __init__.py  material_type.py  product_type.py  product_worksops.py  products.py  workshops.py
schemas/: products.py
templates/: add_product.html  main.html  update_product.html  workshops.html
