[project]
name = "demodemoex"
version = "0.1.0"
description = "Huinia. Author's addr Kompressorny"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
exclude = [".venv/**", "alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["C901"]  # mccabe complexity
fixable = ["B", "C", "W", "E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
ignore = [
    ".venv",
    "alembic/**",
]

